Testes fixed + Codigo mais clean